<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BaseContentBack"
    android:layout_marginTop="@dimen/px_30"
    android:orientation="vertical">

    <!-- 이메일 입력 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_email"
            style="@style/BaseEdit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="8"
            android:background="@drawable/edittext_outline_rect"
            android:gravity="center_vertical|start"
            android:hint="@string/input_email_hint"
            android:paddingLeft="21dp"
            android:textAlignment="viewStart"
            android:textColor="@color/c40"
            android:textColorHint="@color/c42"
            android:textDirection="locale" />
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginLeft="4dp"
            android:background="@drawable/edittext_outline_rect"
            android:textColor="@color/BaseTitleText"
            android:text="@string/btn_auth_confirm">
        </Button>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/lc_demo_color_d9d9d9"
        android:paddingLeft="@dimen/px_30"
        android:paddingRight="@dimen/px_30"></View>

    <!-- 알람 설정 -->
    <TextView
        android:id="@+id/tv_deployment_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:paddingLeft="@dimen/px_30"
        android:paddingRight="@dimen/px_30"
        android:text="@string/lc_device_share_user_list"
        android:textColor="@color/lc_demo_color_8f8f8f"
        android:textSize="@dimen/px_34">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"></androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </LinearLayout>


</LinearLayout>